--- a/soc_empty_lz_dl/.project
+++ b/soc_empty_lz_dl/.project
@@ -674,6 +674,16 @@
 			<locationURI>STUDIO_SDK_LOC/app/bluetooth/common/gatt_service_device_information/sl_gatt_service_device_information.h</locationURI>
 		</link>
 		<link>
+			<name>gecko_sdk_4.4.1/app/bluetooth/common/gatt_service_rht/sl_gatt_service_rht.c</name>
+			<type>1</type>
+			<locationURI>STUDIO_SDK_LOC/app/bluetooth/common/gatt_service_rht/sl_gatt_service_rht.c</locationURI>
+		</link>
+		<link>
+			<name>gecko_sdk_4.4.1/app/bluetooth/common/gatt_service_rht/sl_gatt_service_rht.h</name>
+			<type>1</type>
+			<locationURI>STUDIO_SDK_LOC/app/bluetooth/common/gatt_service_rht/sl_gatt_service_rht.h</locationURI>
+		</link>
+		<link>
 			<name>gecko_sdk_4.4.1/app/bluetooth/common/in_place_ota_dfu/sl_bt_in_place_ota_dfu.c</name>
 			<type>1</type>
 			<locationURI>STUDIO_SDK_LOC/app/bluetooth/common/in_place_ota_dfu/sl_bt_in_place_ota_dfu.c</locationURI>
